--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -33,13 +33,18 @@ header {
     right: 10px;
 }
 
-.feature div {
+.feature {
     display: flex;
 }
 // placeholder to make site navigable for now
-img {
+// img {
+//     width: 100%;
+//     max-width: 600px;
+// }
+
+.btmBox img{
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
 }
 
 .footerContainer {
