--- a/styles/styles.css
+++ b/styles/styles.css
@@ -350,15 +350,15 @@ header {
   right: 10px;
 }
 
-.feature div {
+.feature {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-img {
+.btmBox img {
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
 }
 
 .footerContainer {
