flexbox will be the death of me

--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -85,7 +85,7 @@ h1 {
 // FrederickatheGreat, Regular, 51px
 h2 {
     font-size: 5.1rem;
-    text-align: center;
+    text-align: left;
 }
 
 // h3
