--- a/styles/styles.css
+++ b/styles/styles.css
@@ -290,7 +290,7 @@ h1 {
 
 h2 {
   font-size: 5.1rem;
-  text-align: center;
+  text-align: left;
 }
 
 h3 {
@@ -322,6 +322,10 @@ body {
   background-color: #152D20;
 }
 
+img {
+  max-width: 100%;
+}
+
 .wrapper {
   margin: 0 auto;
   max-width: 1080px;
@@ -346,19 +350,72 @@ header {
 
 .icons {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 15px;
+  right: 20px;
 }
 
-.feature {
+.feature .wrapper {
+  margin-top: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.imageContainer {
+  margin-right: 30px;
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+.textContainer {
+  -ms-flex-preferred-size: 70%;
+      flex-basis: 70%;
+  margin-bottom: 80px;
+}
+.textContainer h2 {
+  margin-bottom: 20px;
+}
+
+.readMore {
+  background-color: white;
+  color: #000;
+  padding: 10px 20px;
+}
+
+.gallery {
+  background-color: #C3D3CB;
+  padding: 50px 30px;
+}
+.gallery li {
+  -ms-flex-preferred-size: 32%;
+      flex-basis: 32%;
+  padding-top: 20px;
+}
+.gallery h3 {
+  margin: 30px 100px;
+}
+
+.galleryFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.linksFlex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
+.blog .topBox img,
 .btmBox img {
   width: 100%;
-  max-width: 800px;
+  max-width: 50%;
 }
 
 .footerContainer {
