blog section mostly done

--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -31,6 +31,7 @@ ul {
 a {
     color: inherit;
     text-decoration: inherit;
+    display: inline-block;
 
 }
 
@@ -39,6 +40,7 @@ a {
 html {
     font-size: 62.5%;
     color: #FCFCFC;
+    height: 100%;
 }
 
 h1,
