--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -57,11 +57,11 @@ header {
     }
 }
 
-// revisit this - read more button is crowding <p> text
 .readMore {
     background-color: white;
     color: #000;
     padding: 10px 20px;
+        margin-top: 30px;
 }
 
 .gallery {
@@ -81,14 +81,53 @@ header {
     justify-content: space-between;
 }
 
+// aligning the three favicons/links between gallery and blog sections
 .linksFlex {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 40px 0px;
+    li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        i {
+            margin-bottom: 20px;
+        }
+    }
+}
+
+.blog {
+    background-color: #FCFCFC;
     display: flex;
 }
 
-.blog .topBox img,
-.btmBox img {
-    width: 100%;
-    max-width: 50%;
+.grid2x2 {
+    min-height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.grid2x2 > div {
+    display: flex;
+    flex-basis: calc(50% - 40px);
+    justify-content: center;
+    flex-direction: column;
+}
+
+.grid2x2 > div > div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px 20px;
+    a {
+        background-color: #152D20;
+        color: #fcfcfc;
+    }
+}
+
+.storyBox div {
+    display: flex;
+    flex-direction: column;
 }
 
 .footerContainer {
