--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -32,9 +32,26 @@ a {
     color: inherit;
     text-decoration: inherit;
     display: inline-block;
-
 }
 
+// trying to get the button styling right
+// input {
+//     all: unset;
+//     background-color: #FCFCFC;
+// }
+
+// input[type="submit"],
+// input[type="reset"] {
+//     background: none;
+//     font-size: 1.8rem;
+//     line-height: 29px;
+//     color: inherit;
+//     border: none;
+//     padding: 0;
+//     font: inherit;
+//     cursor: pointer;
+//     outline: inherit;
+// }
 // font styling to follow, taken from style guide (font, font sizing, line height, alignment)
 
 html {
