--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -44,6 +44,7 @@ a {
 
 button {
     width: 29.5%;
+    font-size: 1.8rem;
     background: black;
     color: #FCFCFC;
     padding: 5px;
@@ -53,8 +54,10 @@ button {
 
 input {
     width: 69.5%;
+    font-size: 1.8rem;
+    padding: 5px;
     border: none;
-    height: 2.9rem;
+    height: 4.9rem;
 }
 
 // font styling to follow, taken from style guide (font, font sizing, line height, alignment)
@@ -145,11 +148,6 @@ a {
     line-height: 29px;
 }
 
-// anchor tags in upper and lower nav section only
-a .navLink {
-// this may not be necessary - will revisit
-}
-
 // "Read More" button text (.readMore)
 // CormorantGaramond. Semibold. 18px
 // Center, Line height: 29px
@@ -157,3 +155,4 @@ a .readMore {
     font-size: 1.8rem;
     line-height: 29px;
 }
+
