--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,6 +262,7 @@ a {
 
 button {
   width: 29.5%;
+  font-size: 1.8rem;
   background: black;
   color: #FCFCFC;
   padding: 5px;
@@ -271,8 +272,10 @@ button {
 
 input {
   width: 69.5%;
+  font-size: 1.8rem;
+  padding: 5px;
   border: none;
-  height: 2.9rem;
+  height: 4.9rem;
 }
 
 html {
@@ -372,10 +375,37 @@ header {
   margin: 0 10px;
 }
 
+/* taking care of hover and keyboard navigation */
+nav a,
+nav a {
+  padding: 5px;
+  -webkit-transition: -webkit-box-shadow 0.15s ease-in-out;
+  transition: -webkit-box-shadow 0.15s ease-in-out;
+  transition: box-shadow 0.15s ease-in-out;
+  transition: box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+nav a:hover,
+nav a:focus {
+  -webkit-box-shadow: 0px 0px 2px 4px #FCFCFC;
+          box-shadow: 0px 0px 2px 4px #FCFCFC;
+}
+
 .icons {
   position: absolute;
   bottom: 15px;
   right: 20px;
+}
+.icons li {
+  margin-bottom: 10px;
+}
+
+/* taking care of hover and keyboard navigation for favicons */
+.icons li:hover,
+.icons li:focus {
+  color: black;
+  background-color: rgba(195, 211, 203, 0.3137254902);
+  border-radius: 50%;
 }
 
 .feature .wrapper {
@@ -407,6 +437,16 @@ header {
   color: #000;
   padding: 10px 20px;
   margin-top: 30px;
+  -webkit-transition: -webkit-filter 0.2s ease-in-out;
+  transition: -webkit-filter 0.2s ease-in-out;
+  transition: filter 0.2s ease-in-out;
+  transition: filter 0.2s ease-in-out, -webkit-filter 0.2s ease-in-out;
+}
+
+.readMore:hover,
+.readMore:focus {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
 }
 
 .gallery {
@@ -509,6 +549,12 @@ header {
   color: #fcfcfc;
 }
 
+.storyBox {
+  max-width: 1080px;
+  width: 90%;
+  margin: 0 auto;
+}
+
 .storyBox div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -529,6 +575,33 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.emailForm {
+  border: none;
+  width: 100%;
+  padding: 10px;
+  text-align: left;
+}
+
+button {
+  width: 29.5%;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  background: black;
+  color: #FCFCFC;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: none;
+  height: 4.9rem;
+}
+
+input {
+  width: 69.5%;
+  font-size: 1.8rem;
+  padding: 5px;
+  border: none;
+  height: 4.9rem;
 }
 
 .contact {
