--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,6 +1,6 @@
 @use 'setup' as *;
 @use 'variables' as *;
-
+@use 'queries' as *;
 
 body {
     background-color: $primaryBackground;
@@ -122,13 +122,30 @@ nav a:focus {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin: 10px;
         i {
             margin-bottom: 20px;
         }
     }
 }
 
-// blog section, 2x2 grid, full-bleed section so flex-basis set at 50%, no wrapper for this section
+// keeping "animal spotlight" on two lines for better spacing
+.linksFlex li :nth-child(2){
+    text-align: center;
+    width: 150px;
+}
+
+// focus settings for favicons/links between gallery and blog sections. 10px margin was added to li and removed during hover/focus to prevent the added padding from moving elements
+.linksFlex li:hover,
+.linksFlex li:focus {
+    color: black;
+    background-color: #c3d3cb50;
+    padding: 10px;
+    margin: 0px;
+    border-radius: 30%;
+}
+
+// blog section, 2x2 grid, full-bleed so flex-basis set at 50%, no wrapper for this section
 .blog {
     background-color: #FCFCFC;
     display: flex;
@@ -158,6 +175,12 @@ nav a:focus {
     }
 }
 
+// prevent READ MORE buttons from horizontally filling flex container
+.readMoreTwo,
+.readMoreThree {
+    width: fit-content;
+}
+
 // applying wrapper settings to the story boxes while allowing the images to bleed to 100% for this section
 .storyBox {
     max-width: 1080px;
@@ -178,11 +201,6 @@ nav a:focus {
     justify-content: space-between;
 }
 
-.newsletterForm {
-    text-align: center;
-    flex: auto;
-    margin-left: 60px;
-}
 
 // input and submit button styling for footer
 .emailForm {
@@ -190,6 +208,13 @@ nav a:focus {
     width: 100%;
     padding: 10px;
     text-align: left;
+}
+
+// newsletter signup input styling
+.newsletterForm {
+    text-align: center;
+    flex: auto;
+    margin-left: 60px;
 }
 
 button {
@@ -215,6 +240,13 @@ input {
 
 .contact {
     text-align: right;
+    a {
+        transition: box-shadow 0.15s ease-in-out;
+    }
+    a:hover,
+    a:focus {
+    box-shadow: 0px 0px 1px 2px #FCFCFC;
+    }
 }
 
 .copyright {
