--- a/styles/styles.css
+++ b/styles/styles.css
@@ -325,9 +325,74 @@ a .readMore {
   line-height: 29px;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1240px) {
   h1 {
-    color: purple;
+    font-size: 9.9vw;
+    line-height: 1;
+  }
+}
+@media (max-width: 1042px) {
+  .feature p,
+.gallery p {
+    font-size: 1.9rem;
+  }
+  .feature h2,
+.gallery h2 {
+    font-size: 4.4rem;
+  }
+  .feature h3,
+.gallery h3 {
+    font-size: 4.3rem;
+  }
+  .feature h4,
+.gallery h4 {
+    font-size: 3rem;
+  }
+  .feature a,
+.gallery a {
+    font-size: 2rem;
+    margin-top: 10px;
+    padding: 5px 10px;
+  }
+}
+@media (max-width: 539px) {
+  .upperNav li {
+    display: none;
+  }
+  h1 {
+    text-align: left;
+    font-size: 7rem;
+    max-width: 50%;
+    line-height: 1;
+  }
+  .icons {
+    display: none;
+  }
+  section .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  section .wrapper h2 {
+    margin-top: 40px;
+    text-align: center;
+  }
+  section .wrapper p {
+    text-align: left;
+  }
+  .gallery h3 {
+    margin: 30px 0px;
+    color: palevioletred;
+  }
+  .galleryFlex {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .galleryFlex li:nth-of-type(3) {
+    display: none;
   }
 }
 body {
@@ -347,6 +412,7 @@ img {
 header {
   background-image: url(../animal-land-assets/image-1.jpg);
   height: 100vh;
+  background-position: 33%;
   padding: 50px 0;
   background-size: cover;
 }
@@ -602,6 +668,7 @@ nav a:focus {
 
 button {
   width: 29.5%;
+  min-width: 150px;
   font-size: 1.8rem;
   text-transform: uppercase;
   background: black;
