--- a/styles/styles.css
+++ b/styles/styles.css
@@ -325,76 +325,6 @@ a .readMore {
   line-height: 29px;
 }
 
-@media (max-width: 1240px) {
-  h1 {
-    font-size: 9.9vw;
-    line-height: 1;
-  }
-}
-@media (max-width: 1042px) {
-  .feature p,
-.gallery p {
-    font-size: 1.9rem;
-  }
-  .feature h2,
-.gallery h2 {
-    font-size: 4.4rem;
-  }
-  .feature h3,
-.gallery h3 {
-    font-size: 4.3rem;
-  }
-  .feature h4,
-.gallery h4 {
-    font-size: 3rem;
-  }
-  .feature a,
-.gallery a {
-    font-size: 2rem;
-    margin-top: 10px;
-    padding: 5px 10px;
-  }
-}
-@media (max-width: 539px) {
-  .upperNav li {
-    display: none;
-  }
-  h1 {
-    text-align: left;
-    font-size: 7rem;
-    max-width: 50%;
-    line-height: 1;
-  }
-  .icons {
-    display: none;
-  }
-  section .wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-  }
-  section .wrapper h2 {
-    margin-top: 40px;
-    text-align: center;
-  }
-  section .wrapper p {
-    text-align: left;
-  }
-  .gallery h3 {
-    margin: 30px 0px;
-    color: palevioletred;
-  }
-  .galleryFlex {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-  .galleryFlex li:nth-of-type(3) {
-    display: none;
-  }
-}
 body {
   background-color: #152D20;
 }
@@ -665,6 +595,12 @@ nav a:focus {
           flex: auto;
   margin-left: 60px;
 }
+.newsletterForm h5 {
+  margin: 50px 0px 20px 0px;
+}
+.newsletterForm p {
+  margin-bottom: 18px;
+}
 
 button {
   width: 29.5%;
@@ -708,4 +644,146 @@ input {
   line-height: 40px;
   text-align: center;
   background-color: #000;
+}
+
+@media (max-width: 1240px) {
+  h1 {
+    font-size: 9.9vw;
+    line-height: 1;
+  }
+}
+@media (max-width: 1042px) {
+  .feature p,
+.gallery p {
+    font-size: 1.9rem;
+  }
+  .feature h2,
+.gallery h2 {
+    font-size: 4.4rem;
+  }
+  .feature h3,
+.gallery h3 {
+    font-size: 4.3rem;
+  }
+  .feature h4,
+.gallery h4 {
+    font-size: 3rem;
+  }
+  .feature a,
+.gallery a {
+    font-size: 2rem;
+    margin-top: 10px;
+    padding: 5px 10px;
+  }
+  .footerContainer h5 {
+    font-size: 3rem;
+    margin: 50px 0px 20px 0px;
+  }
+  .footerContainer a,
+.footerContainer p {
+    font-size: 1.7rem;
+  }
+}
+@media (max-width: 768px) {
+  .upperNav li {
+    display: none;
+  }
+  h1 {
+    text-align: left;
+    font-size: 7rem;
+    max-width: 50%;
+    line-height: 1;
+  }
+  .icons {
+    display: none;
+  }
+  section .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  section .wrapper h2 {
+    margin-top: 40px;
+    text-align: center;
+  }
+  section .wrapper p {
+    text-align: left;
+  }
+  .gallery h3 {
+    margin: 30px 0px;
+  }
+  .galleryFlex {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .galleryFlex img {
+    max-width: 120%;
+  }
+  .galleryFlex li:nth-of-type(3) {
+    display: none;
+  }
+  .blog {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blog > :nth-child(1) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .blog > :nth-child(2) {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .blog > :nth-child(3) {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .blog > :nth-child(4) {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+  .blog img {
+    max-height: 20%;
+  }
+  .blog > div > div > h4 {
+    text-align: center;
+    margin: 30px 0px;
+  }
+  .blog .readMore {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .footerContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footerContainer nav ul {
+    margin-top: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .newsletterForm input, .newsletterForm button {
+    width: 100%;
+  }
+  .contact {
+    text-align: center;
+  }
 }
