--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -406,9 +406,10 @@ input {
         }
     }
 
-    // I've got flex messiness all around here. I'd love to center things but I'm tired.
+    // Still messy here
     .footerContainer {
         flex-direction: column;
+        align-items: center;
         nav ul {
             margin-top: 30px;
             display: flex;
