--- a/styles/styles.css
+++ b/styles/styles.css
@@ -773,6 +773,9 @@ input {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footerContainer nav ul {
     margin-top: 30px;
